# rag-chatbot

./: .gitignore  README.md  docker-compose.yml
client/: .env.example  Dockerfile  README.md  app.py  requirements.txt
server/: Dockerfile  README.md  pyproject.toml
server/app/: main.py  settings.py
server/app/agents/: chatbot_agent.py
server/app/databases/: qdrant.py
server/app/routers/: chat_router.py  file_router.py
server/app/schemas/: chat.py
server/app/services/: chat_service.py  file_service.py
server/app/utils/: file_handler.py  message_converter.py
