[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "emadmohamed95",email = "emadmohamed95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<=3.13.2"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "langgraph (>=0.2.74,<0.3.0)",
    "langchain-openai (>=0.3.6,<0.4.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "langchain (>=0.3.19,<0.4.0)",
    "langchain-qdrant (>=0.2.0,<0.3.0)",
    "pypdf (>=5.3.0,<6.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false